@@ -30,6 +30,7 @@ Cacti CHANGELOG
 -feature: Allow the enabling and disabling of a Data Source from the Data Source Edit form
 -feature: Rerun already associated SNMP Queries if any SNMP related field was changed during host edit
 -feature: add graph title to graphs page
+-feature: add links to Graph Management and Data Sources to Device Edit Screen
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
